feature/preEntregaDos correccion index url, icon w h y headear no stiky

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
-                <a class="navbar-brand divImgNav" href="../index.html">
-                    <img src="./assets/img/logo_juego.png" alt="" width="30" height="24"
+                <a class="navbar-brand divImgNav" href="./index.html">
+                    <img src="./assets/img/logo_juego.png" alt=""
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
