--- a/pages/avances.html
+++ b/pages/avances.html
@@ -55,7 +55,7 @@
             </div>
             <div class="col-12 pt-3 pb-3 divContenedorAvance1">
                 <div class="row">
-                    <div class="col-md-3 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-md-4 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <h2 class="h2Tittle text-white">UNDAWN</h2>
                         <p class="parrafo text-white">Undawn es un multijugador de supervivencia de mundo abierto gratuito con 
                             micropagos (de objetos como vehículos, complementos o apariencias). Comienza con la definición del 
@@ -66,7 +66,7 @@
                             sucedió cuatro años antes de nuestra llegada a la playa. Más adelante iremos descubriendo más detalles 
                             sobre el origen de estas mutaciones y la posibilidad de que se produzca una nueva crisis en el mundo.</p>
                     </div>
-                    <div class="col-md-9 col-sm-12 d-flex flex-wrap justify-content-evenly">
+                    <div class="col-md-8 col-sm-12 d-flex flex-wrap justify-content-evenly">
                         <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_1.webp" alt="Undawn Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_2.jpg" alt="Undawn Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_3.jpeg" alt="Undawn Juego PC">
@@ -84,15 +84,11 @@
             </div>
             <div class="col-12 pt-3 pb-3 divContenedorAvance2 mb-5">
                 <div class="row d-flex invertir">
-                    <div class="col-md-9 col-sm-12 d-flex flex-wrap justify-content-evenly">
-                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_1.jpg"
-                            alt="The Outlast Juego PC">
-                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_2.jpg"
-                            alt="The Outlast Juego PC">
-                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_3.jpg"
-                            alt="The Outlast Juego PC">
-                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_4.webp"
-                            alt="The Outlast Juego PC">
+                    <div class="col-md-8 col-sm-12 d-flex flex-wrap justify-content-evenly">
+                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_1.jpg" alt="The Outlast Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_2.jpg" alt="The Outlast Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_3.jpg" alt="The Outlast Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_4.webp" alt="The Outlast Juego PC">
                         <iframe class="iFrame mb-3" src="https://www.youtube.com/embed/DuKkethkMeo"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -102,7 +98,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="col-md-3 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-md-4 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <h2 class="text-white mb-3 h2Tittle">THE OUTLAST TRIALS</h2>
                         <p class="text-white parrafo">Outlast supuso un hito en los juegos de terror independientes hace casi una 
                             década, un momento en el que el género no paraba de recibir propuestas novedosas como Amnesia: 
