feature/preEntregaTres cambio en todas las imagenes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         Shadows Die Twice.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2">
-                    <img class="imgInicio" src="./assets/img/valheim_recomendado.webp" alt="card">
+                    <img class="imgInicio" src="./assets/img/valheim_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Valheim tiene lugar en un mundo donde los vikingos asesinados van a 
                         demostrar que son aptos para los pasillos de Valhalla . Como tal, el jugador comienza sin nada y pronto 
                         descubre que para llegar al más allá nórdico, debe derrotar a los males que acechan a Valheim. 
@@ -140,13 +140,13 @@
                         entorno de mundo abierto que presenta una versión ficticia de los Estados Unidos en 1899.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2">
-                    <img class="imgInicio" src="./assets/img/factorio_recomendado.webp" alt="card">
+                    <img class="imgInicio" src="./assets/img/factorio_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Factorio es un videojuego de estrategia en tiempo real desarrollado por 
                         Wube Software. Ha estado disponible como videojuego de acceso anticipado desde 2013 y ha sido lanzado 
                         oficialmente el 14 de agosto de 2020.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2">
-                    <img class="imgInicio" src="./assets/img/new_world_recomendado.png" alt="card">
+                    <img class="imgInicio" src="./assets/img/new_world_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">New World es un videojuego de rol multijugador masivo en línea 
                         desarrollado por Amazon Game Studios. Ambientado a mediados del siglo XVII, los jugadores tendrán la 
                         tarea de colonizar tierras modeladas a imagen y semejanza de la América Británica oriental.</p>
