--- a/pages/avances.html
+++ b/pages/avances.html
@@ -67,9 +67,9 @@
                             sobre el origen de estas mutaciones y la posibilidad de que se produzca una nueva crisis en el mundo.</p>
                     </div>
                     <div class="col-md-8 col-sm-12 d-flex flex-wrap justify-content-evenly">
-                        <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_1.webp" alt="Undawn Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_1.jpg" alt="Undawn Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_2.jpg" alt="Undawn Juego PC">
-                        <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_3.jpeg" alt="Undawn Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_3.jpg" alt="Undawn Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/undawn_avances_4.jpg" alt="Undawn Juego PC">
                         <iframe class="iFrame mb-3" src="https://www.youtube.com/embed/ZrG578KyGbw"
                             title="YouTube video player" frameborder="0"
@@ -88,7 +88,7 @@
                         <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_1.jpg" alt="The Outlast Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_2.jpg" alt="The Outlast Juego PC">
                         <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_3.jpg" alt="The Outlast Juego PC">
-                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_4.webp" alt="The Outlast Juego PC">
+                        <img class="imagenAvances mb-3" src="../assets/img/the_outlast_avances_4.jpg" alt="The Outlast Juego PC">
                         <iframe class="iFrame mb-3" src="https://www.youtube.com/embed/DuKkethkMeo"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
