--- a/pages/analisis.html
+++ b/pages/analisis.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
@@ -54,7 +53,7 @@
                 <h1 class="text-white mt-5 mb-5 h1Tittle text-center">ÚLTIMOS ANÁLISIS</h1>
             </div>
             <div class="col-12 d-flex align-items-center divDiablo4">
-                <div class="contenedorFondoAnalisis hoverAnalisis animate__animated animate__backInLeft">
+                <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none" href="https://vandal.elespanol.com/analisis/pc/diablo-4/79069#p-13"
                         target="_blank">
                         <div class="p-3 rounded-3 contenedorAnalisis">
@@ -69,7 +68,7 @@
                 </div>
             </div>
             <div class="col-12 d-flex justify-content-end align-items-center divNoMamSky">
-                <div class="contenedorFondoAnalisis hoverAnalisis animate__animated animate__backInRight">
+                <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/pc/no-mans-sky/22979#p-13" target="_blank">
                         <div class="p-3 rounded-3 contenedorAnalisis">
@@ -84,7 +83,7 @@
                 </div>
             </div>
             <div class="col-12 d-flex align-items-center divStreetFighter">
-                <div class="contenedorFondoAnalisis hoverAnalisis animate__animated animate__backInLeft">
+                <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/ps5/street-fighter-6/120275#p-89" target="_blank">
                         <div class="p-3 rounded-3 contenedorAnalisis">
@@ -98,7 +97,7 @@
                 </div>
             </div>
             <div class="col-12 d-flex justify-content-end align-items-center divDredge">
-                <div class="contenedorFondoAnalisis hoverAnalisis animate__animated animate__backInRight">
+                <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/switch/dredge/125372#p-13" target="_blank">
                         <div class="p-3 rounded-3 contenedorAnalisis">
@@ -113,7 +112,7 @@
                 </div>
             </div>
             <div class="col-12 d-flex align-items-center divStarWars">
-                <div class="contenedorFondoAnalisis hoverAnalisis animate__animated animate__backInLeft">
+                <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/ps5/star-wars-jedi-survivor/119959#p-13"
                         target="_blank">
