feature/preEntregaTres AOS agregado a la pagina Analisis

--- a/pages/analisis.html
+++ b/pages/analisis.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
@@ -56,7 +57,9 @@
                 <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none" href="https://vandal.elespanol.com/analisis/pc/diablo-4/79069#p-13"
                         target="_blank">
-                        <div class="p-3 rounded-3 contenedorAnalisis">
+                        <div class="p-3 rounded-3 contenedorAnalisis" data-aos="fade-right" 
+                             data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                             data-aos-once="true">
                             <h2 class="text-center text-white h2Tittle">Diablo 4</h2>
                             <p class="text-center text-white parrafo">El 1 de noviembre del 2019 es una fecha que pocos podrán
                                 olvidar ya que fue el día elegido por Blizzard para anunciar el regreso de la saga Diablo con 
@@ -71,7 +74,9 @@
                 <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/pc/no-mans-sky/22979#p-13" target="_blank">
-                        <div class="p-3 rounded-3 contenedorAnalisis">
+                        <div class="p-3 rounded-3 contenedorAnalisis" data-aos="fade-left" 
+                             data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                             data-aos-once="true">
                             <h2 class="text-center text-white h2Tittle">No Man's Sky</h2>
                             <p class="text-center text-white parrafo">No Man's Sky es un juego de ciencia ficción y aventura
                                 desarrollado por Hello Games. Contará con niveles generados proceduralmente, y nos dejará explorar 
@@ -86,7 +91,9 @@
                 <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/ps5/street-fighter-6/120275#p-89" target="_blank">
-                        <div class="p-3 rounded-3 contenedorAnalisis">
+                        <div class="p-3 rounded-3 contenedorAnalisis" data-aos="fade-right" 
+                             data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                             data-aos-once="true">
                             <h2 class="text-center text-white h2Tittle">Streat Fighter 6</h2>
                             <p class="text-center text-white parrafo">Se ha hecho de rogar, pero Street Fighter 6 está por fin entre
                                 nosotros. Tras 7 años esperando para poder disfrutar de una nueva entrega numerada de esta icónica e 
@@ -100,7 +107,9 @@
                 <div class="contenedorFondoAnalisis hoverAnalisis">
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/switch/dredge/125372#p-13" target="_blank">
-                        <div class="p-3 rounded-3 contenedorAnalisis">
+                        <div class="p-3 rounded-3 contenedorAnalisis" data-aos="fade-left" 
+                             data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                             data-aos-once="true">
                             <h2 class="text-center text-white h2Tittle">Dredge</h2>
                             <p class="text-center text-white parrafo">Resulta curioso que la pesca haya pasado de ser una mecánica
                                 menor, añadida a la principal casi como un minijuego, a prácticamente un género en sí mismo. Y no 
@@ -116,7 +125,9 @@
                     <a class="text-decoration-none"
                         href="https://vandal.elespanol.com/analisis/ps5/star-wars-jedi-survivor/119959#p-13"
                         target="_blank">
-                        <div class="p-3 rounded-3 contenedorAnalisis">
+                        <div class="p-3 rounded-3 contenedorAnalisis" data-aos="fade-right" 
+                             data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                             data-aos-once="true">
                             <h2 class="text-center text-white h2Tittle">Star Wars Jedi Survivor</h2>
                             <p class="text-center text-white parrafo">Star Wars Jedi: Fallen Order fue un juego importante. No solo
                                 hablamos de un título de aventuras muy divertido que nos llevó al universo creado por George Lucas 
@@ -153,6 +164,10 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
