feature/preEntregaTres Se corrigieron textos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Publica tu Opinión para ayudar a los demás jugadores en los juegos más complicados">
+    <meta name="keywords" content="Opinión Juegos, Foro Juegos">
     <title>Pensado 4 Gamers | Contacto</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,16 +33,16 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="./analisis.html">Analisis</a>
+                            <a class="nav-link text-white" aria-current="page" href="./analisis.html">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./avances.html">Avances</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./guias.html">Guias</a>
+                            <a class="nav-link text-white" href="./guias.html">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">Contanto</a>
+                            <a class="nav-link active text-white" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -50,9 +52,9 @@
     <main class="container-fluid">
         <section class="row">
             <div class="col-12 d-flex flex-column justify-content-center align-items-center mt-4">
-                <h1 class="text-white h1Tittle">COMPARTE TUS JUEGOS FAVORITOS</h1>
-                <p class="text-white text-center parrafo">Corparte tus juegos favoritos, trucos, secretos y ayuda al resto de 
-                    usuario a completar las misiones o los juegos mas dificiles. </p>
+                <h1 class="text-white h1Tittle">Comparte tus Juegos Favoritos</h1>
+                <p class="text-white text-center parrafo">Comparte tus juegos favoritos, trucos, secretos y ayuda al resto de 
+                    usuario a completar las misiones o los juegos más difíciles. </p>
             </div>
             <div class="col-12">
                 <div class="row">
@@ -92,7 +94,7 @@
     <footer class="container-fluid">
         <div class="row justify-content-center align-items-center divFooter">
             <div class="col-md-6 col-sm-12 d-flex mt-3">
-                <h2 class="text-white h2Tittle fs-5">SIGUENOS</h2>
+                <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
                     <a href="https://www.twitch.tv/" target="_blank"><img src="../assets/img/twitch_icon.png"></a>
                     <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
