--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pensado 4 Gamers contiene toda la información de los últimos juegos
+    para PC y las diferentes consolas">
+    <meta name="keywords" content="Juegos PC, Juegos Consolas, Playstation 4, Xbox Series X">
     <title>Pensado 4 Gamers | Inicio</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,16 +34,16 @@
                             <a class="nav-link active text-white" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="./pages/analisis.html">Analisis</a>
+                            <a class="nav-link text-white" aria-current="page" href="./pages/analisis.html">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./pages/avances.html">Avances</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./pages/guias.html">Guias</a>
+                            <a class="nav-link text-white" href="./pages/guias.html">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./pages/contacto.html">Contanto</a>
+                            <a class="nav-link text-white" href="./pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -163,7 +166,7 @@
     <footer class="container-fluid">
         <div class="row justify-content-center align-items-center divFooter">
             <div class="col-md-6 col-sm-12 d-flex mt-3">
-                <h2 class="text-white h2Tittle fs-5">SIGUENOS</h2>
+                <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
                     <a href="https://www.twitch.tv/" target="_blank"><img src="./assets/img/twitch_icon.png"></a>
                     <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
