--- a/pages/analisis.html
+++ b/pages/analisis.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contiene los análisis más populares de los juegos de PC y las diferentes consolas">
+    <meta name="keywords" content="Análisis PC, Análisis Consola, información Juegos">
     <title>Pensado 4 Gamers | Analisis</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,16 +34,16 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Analisis</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./avances.html">Avances</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./guias.html">Guias</a>
+                            <a class="nav-link text-white" href="./guias.html">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./contacto.html">Contanto</a>
+                            <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +145,7 @@
     <footer class="container-fluid">
         <div class="row justify-content-center align-items-center divFooter">
             <div class="col-md-6 col-sm-12 d-flex mt-3">
-                <h2 class="text-white h2Tittle fs-5">SIGUENOS</h2>
+                <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
                     <a href="https://www.twitch.tv/" target="_blank"><img src="../assets/img/twitch_icon.png"></a>
                     <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
