--- a/pages/avances.html
+++ b/pages/avances.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contiene las imágenes y trailers de los próximos Juegos de PC y las diferentes consolas">
+    <meta name="keywords" content="Avances PC, Fotos Juegos, Detalle Juegos">
     <title>Pensado 4 Gamers | Avances</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,16 +33,16 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./analisis.html">Analisis</a>
+                            <a class="nav-link text-white" href="./analisis.html">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" href="#">Avances</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./guias.html">Guias</a>
+                            <a class="nav-link text-white" href="./guias.html">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./contacto.html">Contanto</a>
+                            <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +52,7 @@
     <main class="container-fluid main">
         <section class="row">
             <div class="col-12">
-                <h1 class="text-white text-center mt-5 mb-5 text-uppercase h1Tittle">Disfruta el avance de los proximos
+                <h1 class="text-white text-center mt-5 mb-5 text-uppercase h1Tittle">Disfruta el avance de los próximos
                     juegos</h1>
             </div>
             <div class="col-12 pt-3 pb-3 divContenedorAvance1">
@@ -244,7 +246,7 @@
     <footer class="container-fluid">
         <div class="row justify-content-center align-items-center divFooter">
             <div class="col-md-6 col-sm-12 d-flex mt-3">
-                <h2 class="text-white h2Tittle fs-5">SIGUENOS</h2>
+                <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
                     <a href="https://www.twitch.tv/" target="_blank"><img src="../assets/img/twitch_icon.png"></a>
                     <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
