--- a/pages/guias.html
+++ b/pages/guias.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contiene los trucos y secretos para los juegos más populares">
+    <meta name="keywords" content="Trucos PC, Guias, Trucos Consola">
     <title>Pensado 4 Gamers | Guias</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,16 +33,16 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="./analisis.html">Analisis</a>
+                            <a class="nav-link text-white" aria-current="page" href="./analisis.html">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./avances.html">Avances</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">Guias</a>
+                            <a class="nav-link active text-white" href="#">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./contacto.html">Contanto</a>
+                            <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -49,7 +51,7 @@
     </header>
     <main class="container-fluid">
         <section class="row">
-            <h1 class="col-12 h1Tittle text-white text-center mt-3">TRUCOS Y SECRETOS</h1>
+            <h1 class="col-12 h1Tittle text-white text-center mt-3">Trucos Y Secretos</h1>
             <div class="col-12">
                 <h2 class="text-white text-center h2Tittle mt-5">Red Dead Redemption 2</h2>
                 <p class="text-white parrafo text-justify">Es esta página encontrarás todos los trucos y claves para Red
@@ -215,7 +217,7 @@
     <footer class="container-fluid">
         <div class="row justify-content-center align-items-center divFooter">
             <div class="col-md-6 col-sm-12 d-flex mt-3">
-                <h2 class="text-white h2Tittle fs-5">SIGUENOS</h2>
+                <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
                     <a href="https://www.twitch.tv/" target="_blank"><img src="../assets/img/twitch_icon.png"></a>
                     <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
