feature/preEntregaTres se mejoro mapa, pagina Contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,7 +64,7 @@
                                 <input type="text" class="form-control" id="" placeholder="Nombre">
                             </div>
                             <div class="mb-3">
-                                <input type="email" class="form-control" id="" placeholder="Correo Electronico"
+                                <input type="email" class="form-control" id="" placeholder="Correo Electrónico"
                                     aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
@@ -72,7 +72,7 @@
                             </div>
                             <div class="mb-3">
                                 <textarea class="form-control" id="" rows="10" cols="30"
-                                    placeholder="Trucos, Secretos, etc."></textarea>
+                                    placeholder="Trucos, secretos, etc."></textarea>
                             </div>
                             <button type="submit" class="btn text-white btnForm parrafo">Enviar</button>
                             <button type="submit" class="btn text-white btnForm parrafo">Limpiar</button>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-md-5 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
                         <div class="gmap_canvas">
-                            <iframe width="536" height="370" id="gmap_canvas"
+                            <iframe class="gmap_canvas" id="gmap_canvas"
                                 src="https://maps.google.com/maps?q=california&t=&z=10&ie=UTF8&iwloc=&output=embed"
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                             <a href="https://2yu.co">2yu</a>
